Fixed issue with columns wrapping on mobile

--- a/css/src/frontend/index.css
+++ b/css/src/frontend/index.css
@@ -375,6 +375,7 @@ body.rtl .dslc-last-col {
 .dslc-valign-middle,
 .dslc-valign-bottom {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .dslc-valign-top {
